[gd_scene load_steps=8 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/SettingsHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[node name="SettingsHUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="MainSettings" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -240.0
margin_right = 138.0
margin_bottom = 230.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MainSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -129.0
margin_top = 20.0
margin_right = 129.0
margin_bottom = 350.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainSettings/ScrollContainer"]
margin_right = 258.0
margin_bottom = 224.0
custom_constants/separation = 16

[node name="MuteButton" type="Button" parent="MainSettings/ScrollContainer/VBoxContainer"]
margin_right = 258.0
margin_bottom = 64.0
rect_min_size = Vector2( 258, 64 )
custom_fonts/font = SubResource( 1 )
text = "Sound On"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXShiftButton" type="Button" parent="MainSettings/ScrollContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 258.0
margin_bottom = 144.0
rect_min_size = Vector2( 258, 64 )
custom_fonts/font = SubResource( 2 )
text = "Pitch Shift Off"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="MainSettings/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 258.0
margin_bottom = 224.0
rect_min_size = Vector2( 258, 64 )
custom_fonts/font = SubResource( 3 )
text = "BG Color"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton2" type="Button" parent="MainSettings/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 258.0
margin_bottom = 304.0
rect_min_size = Vector2( 258, 64 )
custom_fonts/font = SubResource( 3 )
text = "FG Color"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton3" type="Button" parent="MainSettings/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 258.0
margin_bottom = 304.0
rect_min_size = Vector2( 258, 64 )
custom_fonts/font = SubResource( 4 )
text = "Player Color"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="MainSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -84.0
margin_right = 129.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSettings" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -285.0
margin_right = 167.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 570 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ColorSettings"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="ColorSettings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -80.0
margin_right = 129.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 5 )
text = "Back"
[connection signal="pressed" from="MainSettings/ScrollContainer/VBoxContainer/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="MainSettings/ScrollContainer/VBoxContainer/SFXShiftButton" to="." method="_on_SFXShiftButton_pressed"]
[connection signal="pressed" from="MainSettings/ScrollContainer/VBoxContainer/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="pressed" from="MainSettings/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="color_changed" from="ColorSettings/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="ColorSettings/BackButton" to="." method="_on_BackButton_pressed"]
